Tue Nov 12 17:32:08 1996  Barry Jaspan  <bjaspan@mit.edu>

	* send-pr/send-pr.sh (MAIL_AGENT): change "[-x" to "[ -x"

Sat Nov  2 02:24:20 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in (SHLIB_TAIL_COMP): Add send-pr

Fri Nov  8 13:17:23 1996  Tom Yu  <tlyu@mit.edu>

	* mkrel: Fix to work with new modules definitions because cvs
 	export -d foo doesn't dtrt.

Sun Nov  3 21:07:35 1996  Tom Yu  <tlyu@mit.edu>

	* mkrel: Run make in doc so that .info and .ps files get created.
	[krb5-misc/143]

Thu Oct 31 12:51:13 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kbuild: Add an option SHARED for configuring --enable-shared. 

Tue Oct 29 15:39:12 1996  Tom Yu  <tlyu@mit.edu>

	* makeshlib.sh: Allow stuffing of SONAME field in shared lib if
	gcc is being used; this requires newer (2.7.0?) gcc and possibly
	binutils (2.6?)

Mon Oct 21 21:23:15 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Fixes for new subdir recursion method.

Thu Sep  5 18:48:46 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (all-unix): Fix symlinking so building in a link
 		farm or in source directory won't result in dangling
 		db-ndbm.h symlink.

Sat Aug 31 01:34:41 1996  Ken Raeburn  <raeburn@cygnus.com>

	* makeshlib.sh (*-*-aix*): Echo more stuff before running it.
	Always use /bin/ld -- the GNU linker isn't supported yet.  Don't
	pass -x or -bfilelist.  Whitespace changes.

Thu Aug 15 20:48:16 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* makeshlib.sh (alpha-*-osf*): add -expect_unresolved (due to
		dbm_error and dbm_clearerr not being in libc when making
		libkdb5)

Thu Aug 15 16:30:00 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (all unix): "install" the db-ndbm header file with
	 	symlinks.

Sun Jul 28 00:43:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* makeshlib.sh (aix Allow symbols for the shared library to
        overide symbols from libc.

Wed Jul 10 00:52:28 1996  Marc Horowitz  <marc@mit.edu>
