@@ -1,3 +1,7 @@
+Fri Nov 22 11:08:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>
+
+	* makeshlib.sh (VERSION): Fix SunOS shared libs [226]
+
 Tue Nov 12 17:32:08 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* send-pr/send-pr.sh (MAIL_AGENT): change "[-x" to "[ -x"
